<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/dining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/dining_header"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dining"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:paddingLeft="@dimen/activity_horizontal_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dining_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/dining_title1"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/dining_blurb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dining_title1"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/dining_blurb1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dining_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dining_blurb1"
                android:fontFamily="sans-serif-light"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/dining_title2"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/dining_blurb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dining_title2"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/dining_blurb2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dining_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dining_blurb2"
                android:fontFamily="sans-serif-light"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/dining_title3"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/dining_blurb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dining_title3"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/dining_blurb3"
                android:textSize="24sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>